[fix] index.html 페이지 링크 추가

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <a href="/details/details.html">detail</a>.<br/>
     <a href="/main.html">main</a>.<br/>
+    <a href="/loginwindow.htnl">login</a><br/>
+    <a href="/signup.html">signup</a><br/>
+    <a href="/user_info.hmtl">user_info</a><br/>
 
 </body>
 </html>
