[Feat] navbar 링크 추가 #1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="/loginwindow.htnl">login</a><br/>
     <a href="/signup.html">signup</a><br/>
     <a href="/user_info.hmtl">user_info</a><br/>
+    <a href="/header.hmtl">header</a><br/>
 
 </body>
 </html>
