--- a/navbar.html
+++ b/navbar.html
@@ -23,7 +23,7 @@
     <div class="nav-container">
       <!-- 로고  -->
       <a routerlink="/" class="navbar-brand text-black"
-        href="https://startbootstrap.com/">
+        href="/main.html">
         <img src="/images/atp.png" alt="Across The Pacific Logo">
         <span class="ms-2">
           Across The Pacific</span>
@@ -372,7 +372,7 @@
           <sbpro-top-nav-item-user _nghost-serverapp-c49="">
             <form _ngcontent-serverapp-c49="" novalidate=""
               class="form-inline ng-untouched ng-pristine ng-valid">
-              <button _ngcontent-serverapp-c49="" data-cy="guidesNavLink" routerlink="/auth/login"
+              <button _ngcontent-serverapp-c49="" data-cy="guidesNavLink" routerlink="/login.html"
                 class="btn btn-primary mb-3 mb-lg-0" tabindex="0">
                 Log In</button>
             </form>
