[FEAT] detail page is now a responsive page

--- a/details/details.html
+++ b/details/details.html
@@ -466,20 +466,13 @@
                                 <div class="col-xl-3">
                                     <div class="card border-left-info shadow h-100 py-2">
                                         <div class="card-body">
-                                            <div class="row no-gutters align-items-center">
+                                            <div class="row-card no-gutters align-items-center">
                                                 <div class="col mr-2">
-                                                    <div class="row-card no-gutters align-items-center">
-                                        
-                                                        <div class="col-auto">
-                                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">내야 할 세금
-                                                            </div>
-                                                            <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">$2534.5</div>
-                                                        </div>
-                                                        <div class="col-auto">
-                                                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
-                                                        </div>
-                                                    </div>
-                                
+                                                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">내야 할 세금</div>
+                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">$2534.5</div>
+                                                </div>
+                                                <div class="col-auto">
+                                                    <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
                                                 </div>
                                             </div>
                                         </div>
@@ -593,10 +586,10 @@
                     </div>
                 </div><!-- 래핑용 -->
 <!-- *****************************여기까지가 2번째 줄줄**********************  -->
-                <div class="chart-wrapper">
+                <div class="graph-wrapper">
                     <div class="chart">
                         <!-- TODO: 차트로 아래 그림 대체체 -->
-                        <img src="images/chart_mock.png" width=720 height=360 alt="Mock 파일입니다." />
+                        <img src="images/chart_mock.png" width=640 height=320 alt="Mock 파일입니다." />
                     </div>    
                 </div>
                 <!-- Reply -->
